<resources>
    <string name="app_name">TaxiAPS</string>
    <string name="facebook_app_id" translatable="false">276966796008290</string>
    <string name="default_notification_ride_admin" translatable="false">1029589359310</string>
    <string name="Map_key" translatable="false">AIzaSyDQFBX0d1JeJLAOIei-43tH5uLrDjnipEQ</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="redirect_url_host" translatable="false">redirect_url_host</string>
    <string name="redirect_url_scheme" translatable="false">redirect_url_scheme</string>
    <string name="oauth_activity_task_affinity" translatable="false">redirect_url_scheme</string>
    <string name="text_firstname">First Name</string>
    <string name="text_log_in">Log In</string>
    <string name="text_send">Send</string>
    <string name="txt_NoInternet">Please Check Internet Connection</string>
    <string name="Validate_Mob_Number">Enter Mobile Number</string>
    <string name="Alert_title_Permission">Permission</string>
    <string name="Alert_Msg_Location">Location and Phone State are mandatory permission please allow to access.  Are you sure you want to continue ?</string>
    <string name="Txt_Continue">Continue</string>
    <string-array name="PickImageRes">
        <item>@string/Takeaphoto</item>
        <item>@string/ChooseFromGall</item>
        <item>@string/text_cancel</item>
    </string-array>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="Rs">\u20B9</string>
    <string name="Takeaphoto">Take a photo</string>
    <string name="ChooseFromGall">Choose from Library</string>
    <string name="text_cancel">Cancel</string>
    <string name="Alert_Tit_Add_Photo">Add Photo!</string>
    <string name="Validate_FirstName">FirstName Shouldn\'t be Empty</string>
    <string name="Validate_LastName">LastName Shouldn\'t be Empty</string>
    <string name="Validate_Email">Email Shouldn\'t be Empty</string>
    <string name="Validate_InvalidEmail">Invalid Email</string>
    <string name="Validate_Password">Password shouldn\'t be Empty</string>
    <string name="Validate_PhoneNumber">PhoneNumber shouldn\'t be Empty</string>
    <string name="Validate_PasswordLength">Password shouldn\'t be less than 8 letters</string>
    <string name="text_social_media">Social Media</string>
    <string name="Txt_Forgot">Forget Password</string>
    <string name="Toast_OTP_send">Otp has been send</string>
    <string name="DeviceNotSupport">This device is not supported.</string>
    <string name="text_Enter_Address">Enter Address</string>
    <string name="Txt_title_SocialLogin">Social Login</string>
    <string name="text_desc_logout">Are you sure to logout?</string>
    <string name="Txt_AddMoney">Add Money</string>
    <string name="Txt_100">5</string>
    <string name="Txt_1000">30</string>
    <string name="Txt_500">20</string>
    <string name="Txt_200">10</string>
    <string name="text_title_Referralcode">Referral Code</string>
    <string name="text_card_subtext2">**** - **** - **</string>
    <string name="text_card_subtext4">**** - **** -</string>
    <string name="Toast_card_delete">Card deleted Successfully</string>
    <string name="text_desc_delete">Are you sure you want delete ?</string>
    <string name="Toast_AddCard">Please Atleast One Card to use Add Money</string>
    <string name="text_sharequote">Take a look at MiTaxi</string>
    <string name="text_play_url" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="text_note_referral">\nPlease take a note of your Referral code -</string>
    <string name="text_share_ref">Share Reffral Code</string>
    <string name="txt_PickupFrom">Pickup from</string>
    <string name="txt_Dropat">Drop at</string>
    <string name="txt_DropAddress">Where would you like to go?</string>
    <string name="txt_gettingAddr">Getting address..</string>
    <string name="txt_Ridelater">RIDE LATER</string>
    <string name="txt_RideNow">RIDE NOW</string>
    <string name="txt_EnterDrop">Enter drop location</string>
    <string name="txt_EnterPick">Enter pick location</string>
    <string name="Txt_HowWouldyouPay">How would you like to pay?</string>
    <string name="Txt_otherpayment">Other Payment Options</string>
    <string name="txt_cash">Cash</string>
    <string name="txt_wallet">Wallet</string>
    <string name="txt_Payment">Payment</string>
    <string name="txt_Home">Home</string>
    <string name="txt_Work">Work</string>
    <string name="txt_Other">Other</string>
    <string name="hint_NameyourFav">Name your favourite (Ex, School)</string>
    <string name="Validate_NickName">Please Enter Nick Name</string>
    <string name="Toast_Favorite_Add">Favorite Added Successfully</string>
    <string name="txt_Favourites">Favourites</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_FareDetails">Fare Details</string>
    <string name="Txt_i">i</string>
    <string name="txt_Gotit">GOT IT</string>
    <string name="txt_Basefare">Base fare</string>
    <string name="txt_RateperKm">Rate per </string>
    <string name="txt_Ridetime">Ride time charge</string>
    <string name="txt_Taxesextra">Taxes extra</string>
    <string name="Alert_Select_carType">Please Select Car Types</string>
    <string name="text_title_Referral">Referral</string>
    <string name="Validate_EnterDropLocation">Please Enter Drop Location</string>
    <string name="Validate_SelectPayment">Please Select Payment</string>
    <string name="txt_sos">Emergency No</string>
    <string name="text_complaint">Complaint</string>
    <string name="Validate_EnterDescription">Please Enter Description</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_Setting">Setting</string>
    <string name="txt_Choose">Choose</string>
    <string name="txt_waitingforDriver">Waiting For Captain</string>
    <string name="Fav_already_saved">Favourite already Saved</string>
    <string name="text_camera">Camera</string>
    <string name="text_galary">Gallery</string>
    <string name="text_profile">Profile</string>
    <string name="txt_confirm">confirm</string>
    <string name="txt_min">Min</string>
    <string name="text_km">Km</string>
    <string name="Txt_TripStarted">Trip Started</string>
    <string name="Txt_TripCompleted">Trip Completed</string>
    <string name="Txt_DriverAccepted">Captain Accepted</string>
    <string name="Txt_TripCanceled">Trip Canceled</string>
    <string name="Txt_title_Promocode">Apply Promo code</string>
    <string name="Validate_Promocode">Please Enter Promo code</string>
    <string name="text_title_History">History</string>
    <string name="Txt_Schedule_Alert">Schedule Time should be greater than 1hr </string>
    <string name="Txt_RideHas">Ride has been Scheduled.</string>
    <string name="Txt_RideCreated">Request Created Successfully</string>
    <string name="Txt_Schedule">SCHEDULE</string>
    <string name="Txt_RideScheduled">Ride Scheduled</string>
    <string name="txt_card">Card</string>
    <string name="Toast_Forgot_Password">Password has been sent to SMS</string>
    <string name="text_pass_sent_sms">Password has been sent to SMS</string>
    <string name="text_pass_sent_email">Password has been sent to Email</string>
    <string name="Txt_NoDriverFound">No Captain Found</string>
    <string name="dialog_no_gps">No GPS</string>
    <string name="dialog_no_gps_messgae">Seems like you have not started your location service.</string>
    <string name="dialog_enable_gps">Enable GPS</string>
    <string name="Txt_Exit">exit</string>
    <string name="Txt_cancel_Msg6">My  reason is not listed</string>
    <string name="text_enable_internet">No Internet Connection Detected</string>
    <string name="text_double_tap_exit">Please click BACK again to exit</string>
    <string name="Txt_NoServiceAvailable">No Service Available</string>
    <string name="txt_arrived">Captain Arrived</string>
    <string name="text_user_exists_alert">A user with this phone number already exists, would u like to Login?</string>
    <string name="Txt_ChooseSeat">Select Your Seat Up to 2 Seats</string>
    <string name="txt_oneUser">Myself</string>
    <string name="txt_twoUser">Pair</string>
    <string name="text_corporate">Corporate</string>
    <string name="share_ride">Share Ride</string>
    <string name="please_choose_seat">Please Choose Seat</string>
    <string name="text_mail_phNum">Please enter your Mobile or Email</string>
    <string name="text_faq">FAQ</string>
    <string name="text_already_login">Someone Login Your Account!</string>
    <string name="txt_support">Support</string>
    <string name="txt_support_email_send">We have received your request</string>
    <string name="driver_away_txt">Captains are %s away</string>
    <string name="text_choose_your_ride">Choose your Ride</string>
    <string name="txt_normal_ride">Normal Ride</string>
    <string name="txt_shareride">Share Ride</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="enter_private_key">Enter Private Key</string>
    <string name="txt_scan_qrcode">Scan QR code</string>
    <string name="txt_enter_privatekey">Enter Private Key</string>
    <string name="text_submit">Submit</string>
    <string name="Driver_started">Captain Started</string>
    <string name="do_you_want_top_driver">Your trip has been scheduled successfully. Do you want to select top rated drivers?</string>
    <string name="add_charges">*Additional charge</string>
    <string name="applicable">applicable</string>
    <string name="txt_try_again">Try again</string>
    <string name="txt_wallet_history">Wallet History</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_resendin">Resend in</string>
    <string name="text_seconds">Seconds</string>
    <string name="txt_user_declained">User Declained</string>
    <string name="txt_user_approved">User Approved</string>
    <string name="user_blocked_text">You are Declained</string>
    <string name="do_you_want_toCancel">Do you want to Cancel?</string>
    <string name="txt_update_avail">Update Available</string>
    <string name="txt_update_desc">Your Application update is available</string>
    <string name="txt_update">Update</string>
    <string name="txt_otp_wrong">Verification Code is wrong, try again</string>
    <string name="txt_enter_otp">Please enter your 6 digit otp.</string>
    <string name="txt_schedule_trip_accepted">Your schedule trip has been accepted</string>
    <string name="txt_trip_scheduleAt">Trip Scheduled At</string>
    <string name="txt_cannot_reg_trip">Cannot Register a trip</string>
    <string name="text_ok">OK</string>
    <string name="text_request_processed">Your request is being processed, you will be notified via mail</string>
    <string name="hint_key">Company Key</string>
    <string name="hint_email">Email</string>
    <string name="text_contact_number">Contact Number</string>
    <string name="text_name">Name</string>
    <string name="text_request">Request</string>
    <string name="key">Your Demo Key is going to \n expire in 2 days </string>
    <string name="text_enter_company_details">Enter Company Details</string>
    <string name="text_error_email_valid">Not a valid email</string>
    <string name="txt_logout_company">Logout Company</string>
    <string name="txt_booking_page">Booking Screen</string>
    <string name="txt_intro_desc">Huge Drivers network \nHelp you to find comfortable and \nsafe ride</string>
    <string name="txt_this_feature_unvailabe_demo">This feature unavailable in Demo</string>
    <string name="txt_user">USER</string>
    <string name="txt_noitification">Notifications</string>
    <string name="txt_my_rides">My Rides</string>
    <string name="txt_wall_pay">Wallet / Payment</string>
    <string name="txt_about_us">About Us</string>
</resources>