<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/while_light"
        android:gravity="center"
        android:padding="@dimen/_11sdp"
        android:text="@string/text_choose_your_ride"
        android:textColor="@color/clr_black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="normal"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clr_white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/normal_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/txt_normal_ride"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/clr_black1"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/share_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/txt_shareride"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/clr_black1"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>