<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/while_light"
        android:gravity="center"
        android:padding="@dimen/_11sdp"
        android:text="@string/Txt_HowWouldyouPay"
        android:textColor="@color/clr_black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="normal"
        android:typeface="sans"
        />

    <LinearLayout
        android:id="@+id/PB_AddMoneylayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="Tab n Go Money"
            android:textColor="@color/clr_black"
            android:textSize="@dimen/_15sdp"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="Add Money,ride,never stop to pay."

            android:typeface="sans"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/Txt_AddMoney"
            android:textColor="@color/clr_primarylite"
            android:background="@color/clr_black1"
            android:layout_height="@dimen/_32sdp" />


    </LinearLayout>


    <TextView
        android:id="@+id/PB_OptionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clr_line2"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/_12sdp"
        android:text="@string/Txt_otherpayment"
        android:textColor="@color/clr_black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="normal"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/clr_white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/PB_Cashlayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            android:background="@color/clr_white"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                app:srcCompat="@drawable/ic_cash"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_25sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/txt_cash"
                android:layout_marginStart="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/clr_black1"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            android:background="@color/clr_white"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/PB_Cardlayout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                app:srcCompat="@drawable/ic_card_yellow"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_25sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/txt_card"
                android:layout_marginStart="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/clr_black1"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

        </LinearLayout>


    <LinearLayout
        android:id="@+id/PB_walletlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@color/clr_white"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_wallet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/txt_wallet"
            android:textColor="@color/clr_black1"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>